# ebi

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  GEMINI_EXAMPLE.md  LICENSE  Makefile  README.ja.md  README.md  build.rs
specs/001-requirements-specification-for/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-requirements-specification-for/contracts/: cli-interface.yaml  llm-api.yaml
src/: error.rs  lib.rs  main.rs  tree_sitter_placeholder.c
src/analyzer/: aggregator.rs  llm_client.rs  mod.rs  orchestrator.rs  prompts.rs
src/cli/: args.rs  mod.rs  prompt.rs  reporter.rs
src/executor/: config.rs  mod.rs  runner.rs
src/localization/: locale.rs  mod.rs  strings.rs
src/models/: analysis.rs  components.rs  mod.rs  report.rs  script.rs
src/parser/: classifier.rs  extractor.rs  language.rs  mod.rs  shebang.rs  tree_sitter.rs
tests/contract/: test_cli_interface.rs  test_llm_api.rs
tests/integration/: test_installation_script.rs  test_language_detection.rs  test_llm_failure.rs  test_simple_analysis.rs  test_user_decline.rs
tests/unit/: test_analysis_aggregation.rs  test_ast_parsing.rs  test_error_handling.rs  test_language_detection.rs
