[package]
name = "ebi"
version = "0.1.0"
edition = "2021"
description = "Evaluate Before Invocation - Script analysis tool using LLMs"
license = "MIT"
repository = "https://github.com/co3k/ebi"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

[dev-dependencies]
mockito = "1.0"
insta = "1.0"

[build-dependencies]
cc = "1.0"
